# ai-math-mentor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  test_simple.py
aimath/agents/: explainer_agent.py  guardrail_agent.py  intent_router_agent.py  parser_agent.py  solver_agent.py  verifier_agent.py
aimath/config/: settings.py
aimath/core/: orchestrator.py  types.py
aimath/database/: memory.py  seed_data.py  vector_store.py
aimath/knowledge_base/: initial_data.json
aimath/scripts/: load_kb.py
aimath/tools/: calculator.py
aimath/ui/: app.py
tests/: test_arithmetic_safety.py  test_explainer.py
